Change language level to java 11