@@ -21,6 +21,7 @@ import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.microsoft.azure.toolkit.ide.cognitiveservices.CognitiveServicesActionsContributor.CREATE_DEPLOYMENT;
 import static com.microsoft.azure.toolkit.ide.cognitiveservices.CognitiveServicesActionsContributor.OPEN_DEPLOYMENT_IN_PLAYGROUND;
@@ -58,7 +59,7 @@ public class CognitiveServicesStartupListener implements StartupActivity {
     private static void tryPlayground() {
             AzureEventBus.once("account.subscription_changed.account", (_a, _b) -> {
                 final List<CognitiveAccount> accounts = Azure.az(AzureCognitiveServices.class).list().stream()
-                    .flatMap(m -> m.accounts().list().stream()).toList();
+                    .flatMap(m -> m.accounts().list().stream()).collect(Collectors.toList());
                 final Optional<CognitiveDeployment> gptModel = accounts.stream()
                     .flatMap(a -> a.deployments().list().stream())
                     .filter(d -> d.getModel().isGPTModel())
